--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ web/Memory.txt
 web/errorMessages.txt
 web/output.txt
 string manipulation/split_output.py
+Why
+web/b.exe
+web/code.exe
+web/draft.cpp
+web/draft.cpp
